--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>气象</title>
 <link href="multiColumnTemplate.css" rel="stylesheet" type="text/css">
-<script src="http://tqyb.com.cn/data/shorttime/gz_shorttime.js"></script> 
-<script src="http://tqyb.com.cn/data/obtStatistics/gz_obtStatistics.js"></script> 
-<script src="http://tqyb.com.cn/data/gzWeather/livingIndex.js"></script>
+<script src="//tqyb.com.cn/data/shorttime/gz_shorttime.js"></script> 
+<script src="//tqyb.com.cn/data/obtStatistics/gz_obtStatistics.js"></script> 
+<script src="//tqyb.com.cn/data/gzWeather/livingIndex.js"></script>
 </head>
 <body>
 <div class="container">
